CelTagController add scope